--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -143,10 +143,8 @@ APP_TITLE=LimeWire\uff1a\u5171\u6709\u3092\u958b\u59cb\u3057\u3066\u3044\u307e\u
 ################################################################################
 #### ABOUT_TITLE=About LimeWire
 ABOUT_TITLE=LimeWire \u306b\u3064\u3044\u3066\u306e\u60c5\u5831
-#### ABOUT_LABEL_START=LimeWire Client
+#### ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_START=LimeWire \u30af\u30e9\u30a4\u30a2\u30f3\u30c8
-#### ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_ADDRESS=http://www.limewire.com
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
@@ -165,8 +163,6 @@ ABOUT_LICENSE_LABEL=\u30e9\u30a4\u30bb\u30f3\u30b9
 ABOUT_LICENSE_TIP=\u3053\u306e\u30bd\u30d5\u30c8\u30a6\u30a7\u30a2\u306b\u95a2\u3059\u308b\u30e9\u30a4\u30bb\u30f3\u30b9\u78ba\u8a8d\u3092\u8868\u793a\u3059\u308b\u3002
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_SCROLL_CHECK_BOX_LABEL=\u81ea\u52d5\u7684\u306b\u30b9\u30af\u30ed\u30fc\u30eb
-#### ABOUT_BUTTON_LABEL=OK
-ABOUT_BUTTON_LABEL=\u4e86\u89e3
 #### ABOUT_BUTTON_TIP=Close the About Window
 ABOUT_BUTTON_TIP="LimeWire \u306b\u3064\u3044\u3066..." \u3092\u9589\u3058\u308b
 
@@ -1568,6 +1564,14 @@ SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Loading saved files...
 SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Loading secure settings...
 
 ##################################################################
+# Key/value pairs for the shutdown window
+##################################################################
+#### SHUTDOWN_TITLE=Shutting down LimeWire...
+#? SHUTDOWN_TITLE=
+#### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
+#? SHUTDOWN_WAIT=
+
+##################################################################
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
@@ -1793,7 +1797,7 @@ ERROR_INVALID_SAVE_DIRECTORY_WINDOW=\u4fdd\u5b58\u5148\u30d5\u30a9\u30eb\u30c0\u
 ERROR_INVALID_SAVE_DIRECTORY_SELECTION=\u9078\u629e\u3057\u305f\u4fdd\u5b58\u5148\u30d5\u30a9\u30eb\u30c0\u306f\u7121\u52b9\u3067\u3059\u3002 \u66f8\u304d\u8fbc\u307f\u3059\u308b\u30a2\u30af\u30bb\u30b9\u6a29\u304c\u306a\u3044\u306e\u304b\u3082\u3057\u308c\u307e\u305b\u3093\u3002 \u4ee5\u524d\u306b\u9078\u629e\u3055\u308c\u305f\u30d5\u30a9\u30eb\u30c0\u306b\u5fa9\u5e30\u3057\u307e\u3059\u3002
 #### ERROR_INVALID_SHARED_DIRECTORY=Invalid directory for sharing files. Please use another directory or revert to the default.
 ERROR_INVALID_SHARED_DIRECTORY=\u30d5\u30a1\u30a4\u30eb\u5171\u6709\u5148\u306e\u30d5\u30a9\u30eb\u30c0\u306f\u7121\u52b9\u3067\u3059\u3002 \u5225\u306e\u30d5\u30a9\u30eb\u30c0\u3092\u4f7f\u7528\u3059\u308b\u304b\u6a19\u6e96\u306b\u623b\u3057\u3066\u4e0b\u3055\u3044\u3002
-#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 for forcing your ip address.
+#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 ERROR_FORCE_IP_PORT_RANGE=IP \u30a2\u30c9\u30ec\u30b9\u3092\u5f37\u5236\u3059\u308b\u306b\u306f\u30dd\u30fc\u30c8\u3092 1 \u304b\u3089 65535 \u306e\u9593\u3067\u5165\u529b\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 ERROR_CONNECT_STRING=\u63a5\u7d9a\u30b9\u30c8\u30ea\u30f3\u30b0\u306b\u306f\u5c11\u306a\u304f\u3068\u3082\u4e00\u6587\u5b57\u5fc5\u8981\u3067\u3059\u3002 \u7a7a\u767d\u306f\u542b\u307e\u308c\u3066\u3082\u69cb\u3044\u307e\u305b\u3093\u304c\u3001 "GIV" \u3084 "GET" \u3068\u3044\u3063\u305f HTTP \u30ad\u30fc\u30ef\u30fc\u30c9\u306f\u542b\u307e\u308c\u3066\u306f\u3044\u3051\u307e\u305b\u3093\u3002
@@ -1967,9 +1971,7 @@ OPTIONS_ADVANCED_MAIN_TITLE=\u8a73\u7d30
 OPTIONS_COMPRESSION_MAIN_TITLE=\u5727\u7e2e
 #### OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
 OPTIONS_PREFERENCING_MAIN_TITLE=\u512a\u5148
-#### OPTIONS_PORT_MAIN_TITLE=Port
-OPTIONS_PORT_MAIN_TITLE=\u30dd\u30fc\u30c8
-#### OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
+#### OPTIONS_FIREWALL_MAIN_TITLE=Firewall Config
 OPTIONS_FIREWALL_MAIN_TITLE=\u30d5\u30a1\u30a4\u30a2\u30a6\u30a9\u30fc\u30eb
 #### OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_PRIVATE_NET_MAIN_TITLE=\u30d7\u30e9\u30a4\u30d9\u30fc\u30c8\u30cd\u30c3\u30c8\u30ef\u30fc\u30af
@@ -2528,17 +2530,19 @@ OPTIONS_PORT_LABEL=\u5185\u5411\u304d\u306e\u63a5\u7d9a\u3092\u5f85\u3061\u53d7\
 OPTIONS_PORT_BOX_LABEL=\u6b21\u306e\u30dd\u30fc\u30c8\u3067\u5f85\u3061\u53d7\u3051\u308b\uff1a
 
 ################################################################################
-# Key/Value pairs for the options for forcing your IP address
+# Key/Value pairs for the options for router configuration
 # in the advanced panel in the options window
 ################################################################################
-#### OPTIONS_FORCE_IP_TITLE=Force Local IP
-OPTIONS_FORCE_IP_TITLE=\u30ed\u30fc\u30ab\u30eb IP \u3092\u5f37\u5236
-#### OPTIONS_FORCE_IP_LABEL=Allows you to force your IP address if you are behind a firewall and would like other gnutella clients to connect without having to send a push request.
-OPTIONS_FORCE_IP_LABEL=\u30d5\u30a1\u30a4\u30a2\u30a6\u30a9\u30fc\u30eb\u5185\u306b\u3044\u3066\u3001 Push \u8981\u6c42\u306e\u9001\u4fe1\u306a\u3057\u306b\u3001 \u4ed6\u306e Gnutella \u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u3068\u63a5\u7d9a\u3057\u305f\u3044\u306a\u3089\u3070\u3001 \u30ed\u30fc\u30ab\u30eb IP \u30a2\u30c9\u30ec\u30b9\u306e\u5f37\u5236\u3092\u8a31\u53ef\u3057\u3066\u4e0b\u3055\u3044\u3002
-#### OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
-OPTIONS_FORCE_IP_CHECK_BOX_LABEL=IP \u3092\u5f37\u5236
-#### OPTIONS_FORCE_IP_PORT_LABEL=Port:
-OPTIONS_FORCE_IP_PORT_LABEL=\u30dd\u30fc\u30c8\uff1a
+#### OPTIONS_ROUTER_TITLE=Router Configuration
+#? OPTIONS_ROUTER_TITLE=
+#### OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
+#? OPTIONS_ROUTER_LABEL=
+#### OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
+#? OPTIONS_ROUTER_UPNP=
+#### OPTIONS_ROUTER_PORT=Manual Port Forward
+#? OPTIONS_ROUTER_PORT=
+#### OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
+#? OPTIONS_ROUTER_NOTHING=
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
