--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -143,10 +143,8 @@ APP_TITLE=LimeWire: \uadf8\ub204\ud154\ub77c \ub124\ud2b8\uc6cc\ud06c
 ################################################################################
 #### ABOUT_TITLE=About LimeWire
 ABOUT_TITLE=LimeWire \uc815\ubcf4
-#### ABOUT_LABEL_START=LimeWire Client
+#### ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_START=\ub77c\uc784\uc640\uc774\uc5b4 \ud074\ub77c\uc774\uc5b8\ud2b8
-#### ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_ADDRESS=http://www.limewire.com
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
@@ -165,8 +163,6 @@ ABOUT_LABEL_TITLE=LimeWire \uc815\ubcf4
 #? ABOUT_LICENSE_TIP=
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_SCROLL_CHECK_BOX_LABEL=\uc790\ub3d9 \uc2a4\ud06c\ub864
-#### ABOUT_BUTTON_LABEL=OK
-ABOUT_BUTTON_LABEL=\ud655\uc778
 #### ABOUT_BUTTON_TIP=Close the About Window
 ABOUT_BUTTON_TIP=\uc815\ubcf4 \ucc3d \ub2eb\uae30
 
@@ -1568,6 +1564,14 @@ GENERAL_LAUNCH_BUTTON_TIP=\uc120\ud0dd\ub41c \ud30c\uc77c \uc2e4\ud589
 #? SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=
 
 ##################################################################
+# Key/value pairs for the shutdown window
+##################################################################
+#### SHUTDOWN_TITLE=Shutting down LimeWire...
+#? SHUTDOWN_TITLE=
+#### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
+#? SHUTDOWN_WAIT=
+
+##################################################################
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
@@ -1793,7 +1797,7 @@ UPDATE_CANCEL_BUTTON_LABEL=\ucde8\uc18c
 #? ERROR_INVALID_SAVE_DIRECTORY_SELECTION=
 #### ERROR_INVALID_SHARED_DIRECTORY=Invalid directory for sharing files. Please use another directory or revert to the default.
 #? ERROR_INVALID_SHARED_DIRECTORY=
-#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 for forcing your ip address.
+#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 #? ERROR_FORCE_IP_PORT_RANGE=
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 #? ERROR_CONNECT_STRING=
@@ -1967,9 +1971,7 @@ OPTIONS_UPLOAD_MAIN_TITLE=\uc62c\ub824\ub193\uae30
 #? OPTIONS_COMPRESSION_MAIN_TITLE=
 #### OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
 #? OPTIONS_PREFERENCING_MAIN_TITLE=
-#### OPTIONS_PORT_MAIN_TITLE=Port
-#? OPTIONS_PORT_MAIN_TITLE=
-#### OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
+#### OPTIONS_FIREWALL_MAIN_TITLE=Firewall Config
 #? OPTIONS_FIREWALL_MAIN_TITLE=
 #### OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 #? OPTIONS_PRIVATE_NET_MAIN_TITLE=
@@ -2528,17 +2530,19 @@ OPTIONS_UPLOAD_MAIN_TITLE=\uc62c\ub824\ub193\uae30
 #? OPTIONS_PORT_BOX_LABEL=
 
 ################################################################################
-# Key/Value pairs for the options for forcing your IP address
+# Key/Value pairs for the options for router configuration
 # in the advanced panel in the options window
 ################################################################################
-#### OPTIONS_FORCE_IP_TITLE=Force Local IP
-#? OPTIONS_FORCE_IP_TITLE=
-#### OPTIONS_FORCE_IP_LABEL=Allows you to force your IP address if you are behind a firewall and would like other gnutella clients to connect without having to send a push request.
-#? OPTIONS_FORCE_IP_LABEL=
-#### OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
-#? OPTIONS_FORCE_IP_CHECK_BOX_LABEL=
-#### OPTIONS_FORCE_IP_PORT_LABEL=Port:
-#? OPTIONS_FORCE_IP_PORT_LABEL=
+#### OPTIONS_ROUTER_TITLE=Router Configuration
+#? OPTIONS_ROUTER_TITLE=
+#### OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
+#? OPTIONS_ROUTER_LABEL=
+#### OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
+#? OPTIONS_ROUTER_UPNP=
+#### OPTIONS_ROUTER_PORT=Manual Port Forward
+#? OPTIONS_ROUTER_PORT=
+#### OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
+#? OPTIONS_ROUTER_NOTHING=
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
