--- a/lib/messagebundles/MessagesBundle_tr.properties
+++ b/lib/messagebundles/MessagesBundle_tr.properties
@@ -143,10 +143,8 @@ APP_TITLE=LimeWire: enabling open information sharing
 ################################################################################
 #### ABOUT_TITLE=About LimeWire
 ABOUT_TITLE=LimeWire hakk\u0131nda
-#### ABOUT_LABEL_START=LimeWire Client
+#### ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_START=LimeWire \u0131stemcisi
-#### ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_ADDRESS=http://www.limewire.com
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_END=Telif hakk\u0131 (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
@@ -165,8 +163,6 @@ ABOUT_LABEL_TITLE=LimeWire hakk\u0131nda
 #? ABOUT_LICENSE_TIP=
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_SCROLL_CHECK_BOX_LABEL=Otomatik kayd\u0131rma
-#### ABOUT_BUTTON_LABEL=OK
-ABOUT_BUTTON_LABEL=Tamam
 #### ABOUT_BUTTON_TIP=Close the About Window
 ABOUT_BUTTON_TIP=Hakk\u0131nda penceresini kapat\u0131r.
 
@@ -1568,6 +1564,14 @@ SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Saved-Files yükleniyor...
 SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Secure-Settings yükleniyor...
 
 ##################################################################
+# Key/value pairs for the shutdown window
+##################################################################
+#### SHUTDOWN_TITLE=Shutting down LimeWire...
+#? SHUTDOWN_TITLE=
+#### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
+#? SHUTDOWN_WAIT=
+
+##################################################################
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
@@ -1793,7 +1797,7 @@ ERROR_INVALID_SAVE_DIRECTORY_WINDOW=Kaydetme dizininiz geçerli de\u011fil. Silin
 #? ERROR_INVALID_SAVE_DIRECTORY_SELECTION=
 #### ERROR_INVALID_SHARED_DIRECTORY=Invalid directory for sharing files. Please use another directory or revert to the default.
 ERROR_INVALID_SHARED_DIRECTORY=Dosyalar\u0131 payla\u015fmak için geçersiz dizin. Lütfen bir ba\u015fka dizin kullan\u0131n ya da öntan\u0131ml\u0131ya geri döndürün.
-#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 for forcing your ip address.
+#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 ERROR_FORCE_IP_PORT_RANGE=Ip adresinizi zorlamak için 1 ile 65535 aras\u0131nda bir port girmelisiniz.
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 ERROR_CONNECT_STRING=Ba\u011flant\u0131 dizgeleri en az 1 uzunlukta olmal\u0131, bir bo\u015fluk içermeli, ve 'GIV', 'GET' ya da herhangi bir ba\u015fka HTTP anahtar sözcü\u011fü içermemelidir.
@@ -1967,9 +1971,7 @@ OPTIONS_ADVANCED_MAIN_TITLE=\u0130leri düzey
 #? OPTIONS_COMPRESSION_MAIN_TITLE=
 #### OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
 OPTIONS_PREFERENCING_MAIN_TITLE=Tercihleme
-#### OPTIONS_PORT_MAIN_TITLE=Port
-OPTIONS_PORT_MAIN_TITLE=Port
-#### OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
+#### OPTIONS_FIREWALL_MAIN_TITLE=Firewall Config
 OPTIONS_FIREWALL_MAIN_TITLE=Ate\u015f duvarlar\u0131
 #### OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_PRIVATE_NET_MAIN_TITLE=Özel a\u011f
@@ -2528,17 +2530,19 @@ OPTIONS_PORT_LABEL=Gelen ba\u011flant\u0131lar\u0131 dinleyen bir bölgesel a\u01
 OPTIONS_PORT_BOX_LABEL=Dinleme portu:
 
 ################################################################################
-# Key/Value pairs for the options for forcing your IP address
+# Key/Value pairs for the options for router configuration
 # in the advanced panel in the options window
 ################################################################################
-#### OPTIONS_FORCE_IP_TITLE=Force Local IP
-OPTIONS_FORCE_IP_TITLE=Bölgesel iP'yi zorla
-#### OPTIONS_FORCE_IP_LABEL=Allows you to force your IP address if you are behind a firewall and would like other gnutella clients to connect without having to send a push request.
-OPTIONS_FORCE_IP_LABEL=Bir ate\u015f duvar\u0131 arkas\u0131ndaysan\u0131z ve di\u011fer Gnutella istemcilerinin bir itme istemi (Push request) göndermeksizin ba\u011flanmas\u0131n\u0131 isterseniz iP adresinizi zorlaman\u0131za izin verir.
-#### OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
-OPTIONS_FORCE_IP_CHECK_BOX_LABEL=IP'yi zorla
-#### OPTIONS_FORCE_IP_PORT_LABEL=Port:
-OPTIONS_FORCE_IP_PORT_LABEL=Port:
+#### OPTIONS_ROUTER_TITLE=Router Configuration
+#? OPTIONS_ROUTER_TITLE=
+#### OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
+#? OPTIONS_ROUTER_LABEL=
+#### OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
+#? OPTIONS_ROUTER_UPNP=
+#### OPTIONS_ROUTER_PORT=Manual Port Forward
+#? OPTIONS_ROUTER_PORT=
+#### OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
+#? OPTIONS_ROUTER_NOTHING=
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
