--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -143,10 +143,8 @@ APP_TITLE=LimeWire: \u8fd0\u884c\u5728 Gnutella \u7f51\u7edc
 ################################################################################
 #### ABOUT_TITLE=About LimeWire
 ABOUT_TITLE=\u5173\u4e8e LimeWire
-#### ABOUT_LABEL_START=LimeWire Client
+#### ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_START=LimeWire \u5ba2\u6237\u7aef, \u7248\u672c
-#### ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_ADDRESS=http://www.limewire.com
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_END=\u7248\u6743 \u6240\u6709 (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
@@ -165,8 +163,6 @@ ABOUT_LABEL_TITLE=\u5173\u4e8e LimeWire
 #? ABOUT_LICENSE_TIP=
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_SCROLL_CHECK_BOX_LABEL=\u81ea\u52a8 \u6eda\u52a8.
-#### ABOUT_BUTTON_LABEL=OK
-ABOUT_BUTTON_LABEL=\u786e\u5b9a
 #### ABOUT_BUTTON_TIP=Close the About Window
 ABOUT_BUTTON_TIP=\u5173\u95ed \u5173\u4e8e \u7a97\u53e3.
 
@@ -1568,6 +1564,14 @@ SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=\u52a0\u8f7d saved files...
 SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=\u52a0\u8f7d secure settings...
 
 ##################################################################
+# Key/value pairs for the shutdown window
+##################################################################
+#### SHUTDOWN_TITLE=Shutting down LimeWire...
+#? SHUTDOWN_TITLE=
+#### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
+#? SHUTDOWN_WAIT=
+
+##################################################################
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
@@ -1793,7 +1797,7 @@ ERROR_INVALID_SAVE_DIRECTORY_WINDOW=\u4f60\u7684 \u4fdd\u5b58 \u6587\u4ef6\u5939
 #? ERROR_INVALID_SAVE_DIRECTORY_SELECTION=
 #### ERROR_INVALID_SHARED_DIRECTORY=Invalid directory for sharing files. Please use another directory or revert to the default.
 ERROR_INVALID_SHARED_DIRECTORY=\u9519\u8bef\u7684 \u5171\u4eab \u6587\u4ef6\u5939. \u8bf7\u7528 \u53e6 \u4e00\u4e2a \u6587\u4ef6\u5939 \u6216\u8005\u6062\u590d\u5230 \u7f3a\u7701 \u8bbe\u7f6e.
-#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 for forcing your ip address.
+#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 ERROR_FORCE_IP_PORT_RANGE=\u4f60 \u5fc5\u987b\u8f93\u5165 1 \u5230 65535 \u4e4b\u95f4\u7684 \u6570.
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 ERROR_CONNECT_STRING=\u8fde\u63a5 \u5b57\u7b26\u4e32\u957f\u5ea6\u81f3\u5c11\u4e3a 1, \u5305\u542b \u4e00\u4e2a \u7a7a\u683c, \u5e76\u4e14 \u4e0d\u80fd \u542b\u6709 'GIV', 'GET' \u6216\u8005\u5176\u4ed6 HTTP \u5173\u952e\u8bcd.
@@ -1967,9 +1971,7 @@ OPTIONS_ADVANCED_MAIN_TITLE=\u9ad8\u7ea7
 #? OPTIONS_COMPRESSION_MAIN_TITLE=
 #### OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
 OPTIONS_PREFERENCING_MAIN_TITLE=\u4f18\u5148 \u9009\u62e9
-#### OPTIONS_PORT_MAIN_TITLE=Port
-OPTIONS_PORT_MAIN_TITLE=\u7aef\u53e3
-#### OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
+#### OPTIONS_FIREWALL_MAIN_TITLE=Firewall Config
 OPTIONS_FIREWALL_MAIN_TITLE=\u9632\u706b\u5899
 #### OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_PRIVATE_NET_MAIN_TITLE=\u79c1\u6709 \u7f51\u7edc
@@ -2528,17 +2530,19 @@ OPTIONS_PORT_LABEL=\u4f60 \u53ef\u4ee5 \u4e3a\u5176\u4ed6 \u4e3b\u673a \u8bbe\u7
 OPTIONS_PORT_BOX_LABEL=\u76d1\u542c \u7aef\u53e3:
 
 ################################################################################
-# Key/Value pairs for the options for forcing your IP address
+# Key/Value pairs for the options for router configuration
 # in the advanced panel in the options window
 ################################################################################
-#### OPTIONS_FORCE_IP_TITLE=Force Local IP
-OPTIONS_FORCE_IP_TITLE=\u5f3a\u5236 \u672c\u5730 IP
-#### OPTIONS_FORCE_IP_LABEL=Allows you to force your IP address if you are behind a firewall and would like other gnutella clients to connect without having to send a push request.
-OPTIONS_FORCE_IP_LABEL=\u5982\u679c \u4f60 \u5728 \u9632\u706b\u5899\u7684 \u540e\u9762\u800c\u60f3\u8ba9\u5176\u4ed6 Gnutella \u5ba2\u6237\u4e0d \u53d1\u9001 \u201c\u63a8\u201d \u8bf7\u6c42\u7684 \u8bdd, \u5c31\u8bf7 \u4f60 \u5f3a\u5236 \u8bbe\u7f6e \u4f60 \u5730 IP \u5730\u5740.
-#### OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
-OPTIONS_FORCE_IP_CHECK_BOX_LABEL=\u5f3a\u5236 IP
-#### OPTIONS_FORCE_IP_PORT_LABEL=Port:
-OPTIONS_FORCE_IP_PORT_LABEL=\u7aef\u53e3 \u53f7:
+#### OPTIONS_ROUTER_TITLE=Router Configuration
+#? OPTIONS_ROUTER_TITLE=
+#### OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
+#? OPTIONS_ROUTER_LABEL=
+#### OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
+#? OPTIONS_ROUTER_UPNP=
+#### OPTIONS_ROUTER_PORT=Manual Port Forward
+#? OPTIONS_ROUTER_PORT=
+#### OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
+#? OPTIONS_ROUTER_NOTHING=
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
