--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -143,10 +143,8 @@ APP_TITLE=LimeWire: \u064a\u0645\u0643\u0646\u0643 \u0645\u0646 \u0645\u0634\u06
 ################################################################################
 #### ABOUT_TITLE=About LimeWire
 ABOUT_TITLE=\u062d\u0648\u0644 LimeWire
-#### ABOUT_LABEL_START=LimeWire Client
+#### ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_START=\u0645\u0633\u062a\u062e\u062f\u0645 LimeWire
-#### ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_ADDRESS=http://www.limewire.com
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_END=\u062c\u0645\u064a\u0639 \u0627\u0644\u062d\u0642\u0648\u0642 \u0645\u062d\u0641\u0648\u0638\u0629 (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
@@ -165,8 +163,6 @@ ABOUT_LICENSE_LABEL=\u0627\u0644\u0627\u062a\u0641\u0627\u0642\u064a\u0629
 ABOUT_LICENSE_TIP=\u0639\u0631\u0636 \u0628\u0646\u0648\u062f \u0627\u0644\u0627\u062a\u0641\u0627\u0642\u064a\u0629 \u0627\u0644\u062e\u0627\u0635\u0629 \u0628\u0627\u0644\u0628\u0631\u0646\u0627\u0645\u062c.
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_SCROLL_CHECK_BOX_LABEL=\u062a\u0645\u0631\u064a\u0631 \u062a\u0644\u0642\u0627\u0626\u064a
-#### ABOUT_BUTTON_LABEL=OK
-ABOUT_BUTTON_LABEL=\u0645\u0648\u0627\u0641\u0642
 #### ABOUT_BUTTON_TIP=Close the About Window
 ABOUT_BUTTON_TIP=\u0625\u063a\u0644\u0627\u0642 \u0627\u0644\u0646\u0627\u0641\u0630\u0629.
 
@@ -1568,6 +1564,14 @@ SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=\u064a\u062a\u0645 \u0627\u06
 SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=\u064a\u062a\u0645 \u0627\u0644\u0622\u0646 \u062a\u062d\u0645\u064a\u0644 secure-settings...
 
 ##################################################################
+# Key/value pairs for the shutdown window
+##################################################################
+#### SHUTDOWN_TITLE=Shutting down LimeWire...
+#? SHUTDOWN_TITLE=
+#### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
+#? SHUTDOWN_WAIT=
+
+##################################################################
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
@@ -1793,7 +1797,7 @@ ERROR_INVALID_SAVE_DIRECTORY_WINDOW=\u0645\u062c\u0644\u062f \u0627\u0644\u062d\
 ERROR_INVALID_SAVE_DIRECTORY_SELECTION=\u0645\u062c\u0644\u062f \u0627\u0644\u062d\u0641\u0638 \u0627\u0644\u0645\u062e\u062a\u0627\u0631 \u063a\u064a\u0631 \u0635\u0627\u0644\u062d. \u0631\u0628\u0645\u0627 \u063a\u064a\u0631 \u0645\u0633\u0645\u0648\u062d \u0644\u0643 \u0628\u0627\u0644\u0643\u062a\u0627\u0628\u0629 \u0644\u0644\u0645\u062c\u0644\u062f \u0627\u0644\u0645\u062e\u062a\u0627\u0631.\u0633\u064a\u0639\u0648\u062f LimeWire \u0644\u0644\u0645\u062c\u0644\u062f \u0627\u0644\u0630\u064a \u0633\u0628\u0642 \u0627\u062e\u062a\u064a\u0627\u0631\u0647.
 #### ERROR_INVALID_SHARED_DIRECTORY=Invalid directory for sharing files. Please use another directory or revert to the default.
 ERROR_INVALID_SHARED_DIRECTORY=\u0627\u0644\u0645\u062c\u0644\u062f \u063a\u064a\u0631 \u0635\u0627\u0644\u062d \u0644\u0645\u0634\u0627\u0631\u0643\u0629 \u0627\u0644\u0645\u0644\u0641\u0627\u062a. \u0645\u0646 \u0641\u0636\u0644\u0643 \u0627\u0633\u062a\u062e\u062f\u0645 \u0645\u062c\u0644\u062f\u0627 \u0622\u062e\u0631 \u0623\u0648 \u0627\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u0627\u0641\u062a\u0631\u0627\u0636\u064a\u0627\u062a.
-#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 for forcing your ip address.
+#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 #? ERROR_FORCE_IP_PORT_RANGE=
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 #? ERROR_CONNECT_STRING=
@@ -1967,9 +1971,7 @@ OPTIONS_ADVANCED_MAIN_TITLE=\u0645\u062a\u0642\u062f\u0645
 OPTIONS_COMPRESSION_MAIN_TITLE=\u0627\u0644\u0636\u063a\u0637
 #### OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
 OPTIONS_PREFERENCING_MAIN_TITLE=\u062a\u0641\u0636\u064a\u0644\u0627\u062a
-#### OPTIONS_PORT_MAIN_TITLE=Port
-OPTIONS_PORT_MAIN_TITLE=\u0627\u0644\u0645\u0646\u0641\u0630
-#### OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
+#### OPTIONS_FIREWALL_MAIN_TITLE=Firewall Config
 OPTIONS_FIREWALL_MAIN_TITLE=\u0627\u0644\u062d\u0648\u0627\u0626\u0637 \u0627\u0644\u0646\u0627\u0631\u064a\u0629
 #### OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_PRIVATE_NET_MAIN_TITLE=\u0634\u0628\u0643\u0629 \u062e\u0627\u0635\u0629
@@ -2528,17 +2530,19 @@ OPTIONS_PORT_LABEL=\u0645\u0646\u0641\u0630\u0627 \u0645\u062d\u062f\u062f\u0627
 OPTIONS_PORT_BOX_LABEL=\u0627\u062a\u0635\u0644 \u0639\u0644\u0649 \u0627\u0644\u0645\u0646\u0641\u0630:
 
 ################################################################################
-# Key/Value pairs for the options for forcing your IP address
+# Key/Value pairs for the options for router configuration
 # in the advanced panel in the options window
 ################################################################################
-#### OPTIONS_FORCE_IP_TITLE=Force Local IP
-#? OPTIONS_FORCE_IP_TITLE=
-#### OPTIONS_FORCE_IP_LABEL=Allows you to force your IP address if you are behind a firewall and would like other gnutella clients to connect without having to send a push request.
-#? OPTIONS_FORCE_IP_LABEL=
-#### OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
-#? OPTIONS_FORCE_IP_CHECK_BOX_LABEL=
-#### OPTIONS_FORCE_IP_PORT_LABEL=Port:
-OPTIONS_FORCE_IP_PORT_LABEL=\u0627\u0644\u0645\u0646\u0641\u0630:
+#### OPTIONS_ROUTER_TITLE=Router Configuration
+#? OPTIONS_ROUTER_TITLE=
+#### OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
+#? OPTIONS_ROUTER_LABEL=
+#### OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
+#? OPTIONS_ROUTER_UPNP=
+#### OPTIONS_ROUTER_PORT=Manual Port Forward
+#? OPTIONS_ROUTER_PORT=
+#### OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
+#? OPTIONS_ROUTER_NOTHING=
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
