--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -143,10 +143,8 @@ APP_TITLE=LimeWire: Verbindung zum Gnutella-Netzwerk
 ################################################################################
 #### ABOUT_TITLE=About LimeWire
 ABOUT_TITLE=Informationen über LimeWire
-#### ABOUT_LABEL_START=LimeWire Client
+#### ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_START=LimeWire Client
-#### ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_ADDRESS=http://www.limewire.com/
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
@@ -165,8 +163,6 @@ ABOUT_LICENSE_LABEL=Lizenz
 ABOUT_LICENSE_TIP=Zeigt die Lizenzvereinbarung für diese Software.
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_SCROLL_CHECK_BOX_LABEL=Automatisch rollen
-#### ABOUT_BUTTON_LABEL=OK
-ABOUT_BUTTON_LABEL=OK
 #### ABOUT_BUTTON_TIP=Close the About Window
 ABOUT_BUTTON_TIP=Schließt dieses Fenster.
 
@@ -1568,6 +1564,14 @@ SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Gespeicherte Dateien werden g
 SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Einstellungen für Sicherheit werden geladen...
 
 ##################################################################
+# Key/value pairs for the shutdown window
+##################################################################
+#### SHUTDOWN_TITLE=Shutting down LimeWire...
+#? SHUTDOWN_TITLE=
+#### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
+#? SHUTDOWN_WAIT=
+
+##################################################################
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
@@ -1793,7 +1797,7 @@ ERROR_INVALID_SAVE_DIRECTORY_WINDOW=Das gewählte Verzeichnis zum Speichern der D
 ERROR_INVALID_SAVE_DIRECTORY_SELECTION=Das gewählte Verzeichnis zum Speichern der Dateien ist ungültig. Sie haben nicht die nötigen Zugriffsrechte um in diesem Verzeichnis zu schreiben. LimeWire kehrt zum vorher ausgewählten Verzeichnis zurück.
 #### ERROR_INVALID_SHARED_DIRECTORY=Invalid directory for sharing files. Please use another directory or revert to the default.
 ERROR_INVALID_SHARED_DIRECTORY=Unzulässiges Verzeichnis für freigegebene Dateien. Benutzen Sie bitte ein anderes Verzeichnis oder kehren Sie zur Werkseinstellung zurück.
-#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 for forcing your ip address.
+#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 ERROR_FORCE_IP_PORT_RANGE=Der Port für das Erzwingen Ihrer IP-Adresse muss eine Nummer zwischen 1 und 65535 sein.
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 ERROR_CONNECT_STRING=Verbindungs-Zeichenketten müssen mindestens 1 Zeichen lang sein und ein Leerzeichen enthalten, und dürfen nicht 'GIV', 'GET' oder andere HTTP-Schlüsselwörter enthalten.
@@ -1967,9 +1971,7 @@ OPTIONS_ADVANCED_MAIN_TITLE=Experte
 OPTIONS_COMPRESSION_MAIN_TITLE=Kompression
 #### OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
 OPTIONS_PREFERENCING_MAIN_TITLE=Präferenzen
-#### OPTIONS_PORT_MAIN_TITLE=Port
-OPTIONS_PORT_MAIN_TITLE=Port
-#### OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
+#### OPTIONS_FIREWALL_MAIN_TITLE=Firewall Config
 OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
 #### OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_PRIVATE_NET_MAIN_TITLE=Privates Netzwerk
@@ -2528,17 +2530,19 @@ OPTIONS_PORT_LABEL=Hier können Sie den Port einstellen, über den sich andere Ben
 OPTIONS_PORT_BOX_LABEL=Port-Nummer:
 
 ################################################################################
-# Key/Value pairs for the options for forcing your IP address
+# Key/Value pairs for the options for router configuration
 # in the advanced panel in the options window
 ################################################################################
-#### OPTIONS_FORCE_IP_TITLE=Force Local IP
-OPTIONS_FORCE_IP_TITLE=Lokale IP-Adresse erzwingen
-#### OPTIONS_FORCE_IP_LABEL=Allows you to force your IP address if you are behind a firewall and would like other gnutella clients to connect without having to send a push request.
-OPTIONS_FORCE_IP_LABEL=Wenn Sie über einen Firewall verbunden sind, kann LimeWire Ihre lokale IP-Adresse erzwingen. Das erlaubt die Verbindung mit anderen Clients ohne "Push"-Ersuchen.
-#### OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
-OPTIONS_FORCE_IP_CHECK_BOX_LABEL=IP-Adresse erzwingen:
-#### OPTIONS_FORCE_IP_PORT_LABEL=Port:
-OPTIONS_FORCE_IP_PORT_LABEL=Port:
+#### OPTIONS_ROUTER_TITLE=Router Configuration
+#? OPTIONS_ROUTER_TITLE=
+#### OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
+#? OPTIONS_ROUTER_LABEL=
+#### OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
+#? OPTIONS_ROUTER_UPNP=
+#### OPTIONS_ROUTER_PORT=Manual Port Forward
+#? OPTIONS_ROUTER_PORT=
+#### OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
+#? OPTIONS_ROUTER_NOTHING=
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
