--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -143,10 +143,8 @@ APP_TITLE=LimeWire: Habilitando para compartir información abierta
 ################################################################################
 #### ABOUT_TITLE=About LimeWire
 ABOUT_TITLE=Acerca de LimeWire
-#### ABOUT_LABEL_START=LimeWire Client
+#### ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_START=Cliente de LimeWire
-#### ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_ADDRESS=http://www.limewire.com
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
@@ -165,8 +163,6 @@ ABOUT_LICENSE_LABEL=Licencia
 ABOUT_LICENSE_TIP=Mostrar el acuerdo de licencia sobre este software.
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_SCROLL_CHECK_BOX_LABEL=Avanzar automáticamente
-#### ABOUT_BUTTON_LABEL=OK
-ABOUT_BUTTON_LABEL=Aceptar
 #### ABOUT_BUTTON_TIP=Close the About Window
 ABOUT_BUTTON_TIP=Cerrar la ventana Acerca de.
 
@@ -1568,6 +1564,14 @@ SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Cargando archivos guardados..
 #? SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=
 
 ##################################################################
+# Key/value pairs for the shutdown window
+##################################################################
+#### SHUTDOWN_TITLE=Shutting down LimeWire...
+#? SHUTDOWN_TITLE=
+#### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
+#? SHUTDOWN_WAIT=
+
+##################################################################
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
@@ -1793,7 +1797,7 @@ ERROR_INVALID_SAVE_DIRECTORY_WINDOW=Su directorio para guardar no es válido. Es 
 ERROR_INVALID_SAVE_DIRECTORY_SELECTION=El directorio para guardar seleccionado no es válido. Es posible que no tenga permiso para escribir en el directorio seleccionado. LimeWire volverá al directorio seleccionado previamente.
 #### ERROR_INVALID_SHARED_DIRECTORY=Invalid directory for sharing files. Please use another directory or revert to the default.
 ERROR_INVALID_SHARED_DIRECTORY=Directorio inválido para compartir archivos. Por favor, utilice otro directorio o vuelva al predeterminado.
-#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 for forcing your ip address.
+#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 ERROR_FORCE_IP_PORT_RANGE=Ingrese un puerto entre 1 y 65535 para canalizar su dirección IP.
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 ERROR_CONNECT_STRING=Las cadenas de conexión como mínimo deben tener un largo de 1, contener un espacio y no deben contener 'GIV', 'GET', ni ninguna otra palabra clave de HTTP.
@@ -1967,9 +1971,7 @@ OPTIONS_ADVANCED_MAIN_TITLE=Avanzado
 OPTIONS_COMPRESSION_MAIN_TITLE=Compresión
 #### OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
 OPTIONS_PREFERENCING_MAIN_TITLE=Preferencias
-#### OPTIONS_PORT_MAIN_TITLE=Port
-OPTIONS_PORT_MAIN_TITLE=Puerto
-#### OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
+#### OPTIONS_FIREWALL_MAIN_TITLE=Firewall Config
 OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
 #### OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_PRIVATE_NET_MAIN_TITLE=Red privada
@@ -2528,17 +2530,19 @@ OPTIONS_PORT_LABEL=Puede establecer el puerto de red local que escucha las conex
 OPTIONS_PORT_BOX_LABEL=Escuchar en puerto:
 
 ################################################################################
-# Key/Value pairs for the options for forcing your IP address
+# Key/Value pairs for the options for router configuration
 # in the advanced panel in the options window
 ################################################################################
-#### OPTIONS_FORCE_IP_TITLE=Force Local IP
-OPTIONS_FORCE_IP_TITLE=Canalizar IP local
-#### OPTIONS_FORCE_IP_LABEL=Allows you to force your IP address if you are behind a firewall and would like other gnutella clients to connect without having to send a push request.
-OPTIONS_FORCE_IP_LABEL=Le permite canalizar su dirección IP si se encuentra detrás de un firewall y desea que otros clientes de Gnutella se conecten sin tener que enviar un pedido de empuje.
-#### OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
-OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Canalizar IP
-#### OPTIONS_FORCE_IP_PORT_LABEL=Port:
-OPTIONS_FORCE_IP_PORT_LABEL=Puerto:
+#### OPTIONS_ROUTER_TITLE=Router Configuration
+#? OPTIONS_ROUTER_TITLE=
+#### OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
+#? OPTIONS_ROUTER_LABEL=
+#### OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
+#? OPTIONS_ROUTER_UPNP=
+#### OPTIONS_ROUTER_PORT=Manual Port Forward
+#? OPTIONS_ROUTER_PORT=
+#### OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
+#? OPTIONS_ROUTER_NOTHING=
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
