--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -143,10 +143,8 @@ APP_TITLE=LimeWire: witamy w sieci Gnutella
 ################################################################################
 #### ABOUT_TITLE=About LimeWire
 ABOUT_TITLE=O programie LimeWire
-#### ABOUT_LABEL_START=LimeWire Client
+#### ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_START=Program kliencki LimeWire
-#### ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_ADDRESS=http://www.limewire.com
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_END=Prawa autorskie (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
@@ -165,8 +163,6 @@ ABOUT_LABEL_TITLE=O programie LimeWire
 #? ABOUT_LICENSE_TIP=
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_SCROLL_CHECK_BOX_LABEL=Przewijaj automatycznie
-#### ABOUT_BUTTON_LABEL=OK
-ABOUT_BUTTON_LABEL=OK
 #### ABOUT_BUTTON_TIP=Close the About Window
 ABOUT_BUTTON_TIP=Zamkni\u0119cie tego okienka
 
@@ -1568,6 +1564,14 @@ SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=\u0141adowanie saved-files...
 SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=\u0141adowanie secure-settings...
 
 ##################################################################
+# Key/value pairs for the shutdown window
+##################################################################
+#### SHUTDOWN_TITLE=Shutting down LimeWire...
+#? SHUTDOWN_TITLE=
+#### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
+#? SHUTDOWN_WAIT=
+
+##################################################################
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
@@ -1793,7 +1797,7 @@ ERROR_INVALID_SAVE_DIRECTORY_WINDOW=Wyst\u0105pi\u0142 problem w dost\u0119pie d
 #? ERROR_INVALID_SAVE_DIRECTORY_SELECTION=
 #### ERROR_INVALID_SHARED_DIRECTORY=Invalid directory for sharing files. Please use another directory or revert to the default.
 ERROR_INVALID_SHARED_DIRECTORY=Wybrany katalog nie mo\u017ce zosta\u0107 udost\u0119pniony. Prosimy wybra\u0107 inny katalog lub zdefiniowa\u0107 domy\u015blny.
-#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 for forcing your ip address.
+#### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 ERROR_FORCE_IP_PORT_RANGE=Opcja wymuszania adresu IP wymaga podania numeru portu w przedziale 1-65535.
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 ERROR_CONNECT_STRING=Argument parametru Connect musi zawiera\u0107 minimum jeden dowolny znak oraz jedn\u0105 spacj\u0119 i nie mo\u017ce zawiera\u0107 ci\u0105gów: 'GIV', 'GET' b\u0105d\u017a innych s\u0142ów kluczowych stosowanych w protokole HTTP.
@@ -1967,9 +1971,7 @@ OPTIONS_ADVANCED_MAIN_TITLE=Zaawansowane
 #? OPTIONS_COMPRESSION_MAIN_TITLE=
 #### OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
 OPTIONS_PREFERENCING_MAIN_TITLE=Preferowanie
-#### OPTIONS_PORT_MAIN_TITLE=Port
-OPTIONS_PORT_MAIN_TITLE=Port
-#### OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
+#### OPTIONS_FIREWALL_MAIN_TITLE=Firewall Config
 OPTIONS_FIREWALL_MAIN_TITLE=Zabezpieczenia
 #### OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_PRIVATE_NET_MAIN_TITLE=Podsie\u0107 prywatna
@@ -2528,17 +2530,19 @@ OPTIONS_PORT_LABEL=Tutaj mo\u017cesz zdefiniowa\u0107 port, na którym program b\
 OPTIONS_PORT_BOX_LABEL=Nas\u0142uchuj na porcie:
 
 ################################################################################
-# Key/Value pairs for the options for forcing your IP address
+# Key/Value pairs for the options for router configuration
 # in the advanced panel in the options window
 ################################################################################
-#### OPTIONS_FORCE_IP_TITLE=Force Local IP
-OPTIONS_FORCE_IP_TITLE=Wymuszanie adresu IP
-#### OPTIONS_FORCE_IP_LABEL=Allows you to force your IP address if you are behind a firewall and would like other gnutella clients to connect without having to send a push request.
-OPTIONS_FORCE_IP_LABEL=Umo\u017cliwia wymuszenie adresu IP w sytuacji kiedy znajdujesz si\u0119 za firewall-em, a chcia\u0142by\u015b uzyska\u0107 bezproblemowe po\u0142\u0105czenie z Gnutell\u0105.
-#### OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
-OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Wymuszaj IP
-#### OPTIONS_FORCE_IP_PORT_LABEL=Port:
-OPTIONS_FORCE_IP_PORT_LABEL=Port:
+#### OPTIONS_ROUTER_TITLE=Router Configuration
+#? OPTIONS_ROUTER_TITLE=
+#### OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
+#? OPTIONS_ROUTER_LABEL=
+#### OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
+#? OPTIONS_ROUTER_UPNP=
+#### OPTIONS_ROUTER_PORT=Manual Port Forward
+#? OPTIONS_ROUTER_PORT=
+#### OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
+#? OPTIONS_ROUTER_NOTHING=
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
