synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -624,6 +624,8 @@ SEARCH_BROWSEHOST_TITLE=Har du venner?
 SEARCH_BROWSEHOST_DESC=Indtast IP-adressen for en ven som du gerne vil i forbindelse med, klik "Direkte forbindelse", og LimeWire vil forsøge at gennemse din vens filer.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=Når dine venner vil i forbindelse med dig, så skal de indtaste
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=Direkte forbindelse
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
