--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -624,6 +624,8 @@ SEARCH_BROWSEHOST_TITLE=¿Tiene amigos?
 SEARCH_BROWSEHOST_DESC=Ingrese la dirección IP de un amigo a quien desea conectarse, haga clic en 'conexión directa' y LimeWire intentará buscar los archivos de dicho usuario.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 #? SEARCH_BROWSEHOST_MYIP=
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=Conexión directa
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
