--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -624,6 +624,8 @@ SEARCH_BROWSEHOST_TITLE=\u53cb\u9054\u304c\u3067\u304d\u307e\u3057\u305f\u304b\u
 SEARCH_BROWSEHOST_DESC=\u63a5\u7d9a\u3057\u305f\u3044\u76f8\u624b\u306e\u53cb\u9054\u306e IP \u30a2\u30c9\u30ec\u30b9\u3092\u5165\u529b\u3057\u3066 "\u76f4\u63a5\u63a5\u7d9a" \u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u4e0b\u3055\u3044\u3002 \u3059\u308b\u3068\u3001 \u305d\u306e\u30e6\u30fc\u30b6\u30fc\u306e\u30d5\u30a1\u30a4\u30eb\u306e\u53c2\u7167\u3092\u8a66\u307f\u307e\u3059\u3002
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=\u3082\u3057\u53cb\u9054\u304c\u3042\u306a\u305f\u306b\u63a5\u7d9a\u3057\u305f\u3044\u306e\u306a\u3089\u6b21\u306e IP \u3092\u5165\u529b\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=\u76f4\u63a5\u63a5\u7d9a
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
