--- a/lib/messagebundles/MessagesBundle_no.properties
+++ b/lib/messagebundles/MessagesBundle_no.properties
@@ -624,6 +624,8 @@ SEARCH_BROWSEHOST_TITLE=Har du venner?
 SEARCH_BROWSEHOST_DESC=Skriv IP-adressen til en venn du vil koble deg til, klikk 'Direkte kobling', og LimeWire vil prøve å bla igjennom den brukerens filer.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=Om dine venner vil koble seg til deg må de skrive
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=Direkte kobling
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
