--- a/lib/messagebundles/MessagesBundle_af.properties
+++ b/lib/messagebundles/MessagesBundle_af.properties
@@ -624,6 +624,8 @@ SEARCH_BROWSEHOST_TITLE=Het jy Vriende?
 SEARCH_BROWSEHOST_DESC=Enter die IP adres van 'n vriend waaraan jy wil connect, click "Direct Connect" en LimeWire sal try om die files van die vriend te browse. 
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=Wanneer een van jou vriende aan jou wil connect moet hulle 
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 #? SEARCH_BROWSEHOST_BUTTON=
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
