--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -624,6 +624,8 @@ SEARCH_TYPE_WHATSNEW=\u0645\u062c\u062a\u0645\u0639
 #? SEARCH_BROWSEHOST_DESC=
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 #? SEARCH_BROWSEHOST_MYIP=
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 #? SEARCH_BROWSEHOST_BUTTON=
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
