--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -624,6 +624,8 @@ SEARCH_BROWSEHOST_TITLE=Haben Sie Bekannte?
 SEARCH_BROWSEHOST_DESC=Geben Sie die IP Adresse eines Bekannten mit dem Sie sich verbinden wollen ein und klicken Sie 'Direkte Verbundung'. LimeWire wird versuchen die Dateien dieses Benutzers anzuzeigen.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=Wenn ihre Bekannten sich mit ihnen verbinden wollen, dann sollten sie Folgendes eingeben
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=Direkt verbinden
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
