--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -624,6 +624,8 @@ SEARCH_BROWSEHOST_TITLE=Vos amis?
 SEARCH_BROWSEHOST_DESC=Entrez l'adresse IP d'un de vos amis avec qui vous voulez vous connecter, cliquez sur 'Connexion directe', et LimeWire tentera d'obtenir la liste des fichiers partagés par cet utilisateur.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=Si vos amis souhaitent se connecter à vous, ils peuvent entrer
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=Connexion directe
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
