--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -624,6 +624,8 @@ SEARCH_BROWSEHOST_TITLE=\u05dc\u05d4\u05e1\u05d9\u05d2 \u05de\u05e9\u05ea\u05de\
 SEARCH_BROWSEHOST_DESC=\u05d4\u05db\u05e0\u05e1 \u05db\u05ea\u05d5\u05d1\u05ea \u05d4 IP \u05e9\u05dc \u05d4\u05de\u05e9\u05ea\u05de\u05e9 \u05e9\u05d0\u05dc\u05d9\u05d5 \u05e8\u05d5\u05e6\u05d4 \u05dc\u05d4\u05ea\u05d7\u05d1\u05e8 \u05d9\u05e9\u05d9\u05e8\u05d5\u05ea, \u05dc\u05d7\u05e5 \u05e2\u05dc "\u05d4\u05ea\u05d7\u05d1\u05e8\u05d5\u05ea \u05d9\u05e9\u05d9\u05e8\u05d4" \u05d5- LimeWire \u05d9\u05e0\u05e1\u05d4 \u05dc\u05e1\u05e8\u05d5\u05e7 \u05d0\u05ea \u05d4\u05de\u05e9\u05ea\u05de\u05e9.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=\u05d4\u05db\u05ea\u05d5\u05d1\u05ea IP \u05e9\u05dc\u05da \u05e2\u05d1\u05d5\u05e8 \u05d7\u05d1\u05e8\u05d9\u05dd \u05d4\u05d9\u05e0\u05d4
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=\u05d4\u05ea\u05e7\u05e9\u05e8\u05d5\u05ea \u05d9\u05e9\u05d9\u05e8\u05d4
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
