--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -624,6 +624,8 @@ SEARCH_PUBLIC_LAUNCH_STRING=\ud30c\uc77c(\ub4e4) \uc2e4\ud589
 #? SEARCH_BROWSEHOST_DESC=
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 #? SEARCH_BROWSEHOST_MYIP=
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 #? SEARCH_BROWSEHOST_BUTTON=
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
