--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -624,6 +624,8 @@ AUTO_DL_CHECKBOX_TOOLTIP=LimeWire \u5c06\u4e3a \u4f60 \u4e0b\u8f7d \u8fd9\u4e9b 
 #? SEARCH_BROWSEHOST_DESC=
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 #? SEARCH_BROWSEHOST_MYIP=
+#### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
+#? SEARCH_BROWSEHOST_FIREWALLED=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 #? SEARCH_BROWSEHOST_BUTTON=
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
